@@ -1,0 +1,19 @@
+# $NetBSD: Makefile,v 1.1.1.1 2003/12/29 13:19:34 grant Exp $
+
+DISTNAME=	Log-Dispatch-FileRotate-1.11
+PKGNAME=	p5-${DISTNAME}
+CATEGORIES=	devel perl5
+MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Log/}
+
+MAINTAINER=	tech-pkg@NetBSD.org
+COMMENT=	Perl5 module to log to files which archive/rotate themselves
+
+DEPENDS+=	p5-Date-Manip>=5.0:../../devel/p5-Date-Manip
+DEPENDS+=	p5-Log-Dispatch>=2.08:../../devel/p5-Log-Dispatch
+DEPENDS+=	p5-Params-Validate>=0.15:../../devel/p5-Params-Validate
+
+USE_BUILDLINK2=		YES
+PERL5_PACKLIST=		${PERL5_SITEARCH}/auto/Log/Dispatch/FileRotate/.packlist
+
+.include "../../lang/perl5/module.mk"
+.include "../../mk/bsd.pkg.mk"
