@@ -1,0 +1,4 @@
+$NetBSD: distinfo,v 1.1.1.1 2003/12/29 13:19:34 grant Exp $
+
+SHA1 (Log-Dispatch-FileRotate-1.11.tar.gz) = 62f2d188e4aaa04c4bc4227365311719914a90eb
+Size (Log-Dispatch-FileRotate-1.11.tar.gz) = 12080 bytes
